Fix mplfinance syntax in requirements

--- a/requirements.txt
+++ b/requirements.txt
@@ -6,6 +6,6 @@ APScheduler >= 3.9, <4.0 # לתזמון משימות ברקע
 gspread >= 5.0, <7.0 # לאינטגרציה עם Google Sheets
 oauth2client >= 4.0, <5.0 # לאימות עם Google APIs (נדרש ע"י gspread)
 yfinance >= 0.2, <0.3 # להורדת נתוני מניות
-mplfinance mplfinance~=0.12.7 # ליצירת גרפים פיננסיים
+mplfinance ~=0.12.7 # ליצירת גרפים פיננסיים
 requests >= 2.0, <3.0 # ספריית HTTP (לעיתים נדרשת על ידי ספריות אחרות או לשימוש ישיר)
 python-dotenv >= 0.20, <2.0 # (אופציונלי) לטעינת משתני סביבה מקובץ .env בפיתוח מקומי
