--- a/requirements.txt
+++ b/requirements.txt
@@ -1,11 +1,17 @@
+# requirements.txt
 
-python-telegram-bot[job-queue] >= 20.0, <22.0 # ספריית טלגרם, כולל תמיכה ב-JobQueue
-Flask >= 2.0, <4.0 # לשרת ה-Webhook
-gunicorn >= 20.0, <23.0 # שרת WSGI מומלץ לפרודקשן עם Flask (Render ישתמש בזה)
-APScheduler >= 3.9, <4.0 # לתזמון משימות ברקע
-gspread >= 5.0, <7.0 # לאינטגרציה עם Google Sheets
-oauth2client >= 4.0, <5.0 # לאימות עם Google APIs (נדרש ע"י gspread)
-yfinance >= 0.2, <0.3 # להורדת נתוני מניות
-mplfinance >= 0.12.9b0, <0.13.0 # ליצירת גרפים פיננסיים
-requests >= 2.0, <3.0 # ספריית HTTP (לעיתים נדרשת על ידי ספריות אחרות או לשימוש ישיר)
-python-dotenv >= 0.20, <2.0 # (אופציונלי) לטעינת משתני סביבה מקובץ .env בפיתוח מקומי
+python-telegram-bot[job-queue] >= 20.0, <22.0
+Flask >= 2.0, <4.0
+gunicorn >= 20.0, <23.0
+APScheduler >= 3.9, <4.0
+gspread >= 5.0, <7.0
+# oauth2client >= 4.0, <5.0 # הוחלף על ידי google-auth ו-google-auth-oauthlib שתלויים ב-gspread
+google-auth >= 1.32.0, <3.0.0 # תלות של gspread ו-google.oauth2.service_account
+google-auth-oauthlib >= 0.4.0, <2.0.0 # תלות אפשרית של gspread
+yfinance >= 0.2.30, <0.3.0
+mplfinance >= 0.12.9b0, <0.13.0 
+# או אם הגרסה הספציפית הזו עדיין בעייתית, נסה טווח כללי יותר:
+# mplfinance >= 0.12, <0.13
+matplotlib >= 3.5, <4.0 # תלות של mplfinance
+requests >= 2.0, <3.0
+python-dotenv >= 0.20, <2.0 # אופציונלי לפיתוח מקומי
