--- a/requirements.txt
+++ b/requirements.txt
@@ -1,5 +1,3 @@
-# requirements.txt
-
 python-telegram-bot[job-queue] >= 20.0, <22.0
 Flask >= 2.0, <4.0
 gunicorn >= 20.0, <23.0
@@ -12,4 +10,4 @@ mplfinance >= 0.12.9b0, <0.13.0
 matplotlib >= 3.5, <4.0
 requests >= 2.0, <3.0
 python-dotenv >= 0.20, <2.0
-pytz # אם אתה משתמש בו להמרת זמנים
+pytz
