--- a/requirements.txt
+++ b/requirements.txt
@@ -1,13 +1,25 @@
-python-telegram-bot[job-queue] >= 20.0, <22.0
-Flask >= 2.0, <4.0
-gunicorn >= 20.0, <23.0
-APScheduler >= 3.9, <4.0
-gspread >= 5.0, <7.0
-google-auth >= 1.32.0, <3.0.0 
-google-auth-oauthlib >= 0.4.0, <2.0.0 
-yfinance >= 0.2.30, <0.3.0
-mplfinance >= 0.12.9b0, <0.13.0 
-matplotlib >= 3.5, <4.0
-requests >= 2.0, <3.0
-python-dotenv >= 0.20, <2.0
+# requirements.txt
+
+# Core Bot & Web
+python-telegram-bot[job-queue]>=20.0,<22.0
+Flask>=2.0,<4.0
+gunicorn>=20.0,<23.0
+uvicorn>=0.20.0,<1.0.0  # <--- תוספת חדשה
+asgiref>=3.0.0,<4.0.0   # <--- תוספת חדשה
+
+# Scheduling
+APScheduler>=3.9,<4.0
+
+# Google Sheets
+gspread>=5.12.0,<7.0.0
+google-auth>=2.0.0,<3.0.0
+
+# Data & Graphing
+yfinance>=0.2.30,<0.3.0
+mplfinance>=0.12.9b0,<0.13.0
+matplotlib>=3.5,<4.0
 pytz
+
+# Utilities
+requests>=2.0,<3.0
+python-dotenv>=0.20,<2.0
