--- a/requirements.txt
+++ b/requirements.txt
@@ -1,11 +1,11 @@
 # requirements.txt
 
-# Core Bot & Web
+# Core Bot, Web Server, and ASGI
 python-telegram-bot[job-queue]>=20.0,<22.0
 Flask>=2.0,<4.0
 gunicorn>=20.0,<23.0
-uvicorn>=0.20.0,<1.0.0  # <--- תוספת חדשה
-asgiref>=3.0.0,<4.0.0   # <--- תוספת חדשה
+uvicorn>=0.20.0,<1.0.0
+asgiref>=3.0.0,<4.0.0
 
 # Scheduling
 APScheduler>=3.9,<4.0
