--- a/requirements.txt
+++ b/requirements.txt
@@ -1,25 +1,11 @@
-# requirements.txt
-
-# Core Bot, Web Server, and ASGI
-python-telegram-bot[job-queue]>=20.0,<22.0
-Flask>=2.0,<4.0
-gunicorn>=20.0,<23.0
-uvicorn>=0.20.0,<1.0.0
-asgiref>=3.0.0,<4.0.0
-
-# Scheduling
-APScheduler>=3.9,<4.0
-
-# Google Sheets
-gspread>=5.12.0,<7.0.0
-google-auth>=2.0.0,<3.0.0
-
-# Data & Graphing
-yfinance>=0.2.30,<0.3.0
-mplfinance>=0.12.9b0,<0.13.0
-matplotlib>=3.5,<4.0
-pytz
-
-# Utilities
-requests>=2.0,<3.0
-python-dotenv>=0.20,<2.0
+python-telegram-bot==20.3
+Flask==2.3.2
+uvicorn==0.22.0
+asgiref==3.7.2
+apscheduler==3.10.1
+gspread==5.11.3
+oauth2client==4.1.3
+yfinance==0.2.28
+matplotlib==3.7.2
+pandas==2.0.3
+numpy==1.25.1
