--- a/requirements.txt
+++ b/requirements.txt
@@ -1,17 +1,5 @@
-python-telegram-bot[job-queue]==20.8
 flask==2.3.3
-gunicorn==21.2.0
-uvicorn[standard]==0.23.2
-asgiref==3.7.2
 gspread==5.12.0
 google-auth==2.23.4
-google-auth-oauthlib==1.1.0
-google-auth-httplib2==0.1.1
-apscheduler==3.10.4
-yfinance==0.2.28
-mplfinance==0.12.10b0
-matplotlib==3.8.2
-pandas==2.1.4
-numpy==1.24.3
+python-telegram-bot==20.8
 requests==2.31.0
-pytz==2023.3
