--- a/requirements.txt
+++ b/requirements.txt
@@ -3,3 +3,10 @@ gspread==5.12.0
 google-auth==2.23.4
 python-telegram-bot==20.8
 requests==2.31.0
+apscheduler==3.10.4
+yfinance==0.2.28
+mplfinance==0.12.10b0
+matplotlib==3.8.2
+pandas==2.1.4
+numpy==1.24.3
+pytz==2023.3
