--- a/requirements.txt
+++ b/requirements.txt
@@ -1,12 +1,8 @@
+python-telegram-bot==20.5
+gspread==6.0.2
+google-auth-oauthlib==1.1.0
 apscheduler==3.10.4
-gspread==5.12.0
-google-auth==2.23.4
-python-telegram-bot==20.8
-requests==2.31.0
-yfinance==0.2.28
-mplfinance==0.12.10b0
 matplotlib==3.8.2
 pandas==2.1.4
-numpy==1.24.3
-pytz==2023.3
-tzdata==2024.1
+requests==2.31.0
+finnhub-python==2.4.20
