--- a/requirements.txt
+++ b/requirements.txt
@@ -1,8 +1,7 @@
-pyTelegramBotAPI==4.15.4
-gspread==5.12.0
-oauth2client==4.1.3
-python-telegram-bot==20.3
-pandas==2.2.1
-matplotlib==3.8.4
-requests==2.31.0
+python-telegram-bot==20.5
+gspread==6.0.2
+google-auth-oauthlib==1.1.0
 apscheduler==3.10.4
+matplotlib==3.8.2
+pandas==2.1.4
+requests==2.31.0
